Fix debug build with assertions disabled https://bugs.webkit.org/show_bug.cgi?id=256199 rdar://108773614

Reviewed by Chris Dumez.

There are some inconsistent uses of NDEBUG, LOG_DISABLED, and ASSERT_ENABLED.
If I change the definition of ASSERT_ENABLED to always be 0, this fixes the debug build.

* Source/JavaScriptCore/bytecode/CodeBlock.h:
* Source/WTF/wtf/RefCountedLeakCounter.cpp:
(WTF::RefCountedLeakCounter::RefCountedLeakCounter):
* Source/WTF/wtf/RefCountedLeakCounter.h:
* Source/WebCore/animation/KeyframeEffect.cpp:
(WebCore::acceleratedPropertyDidChange):
* Source/WebCore/layout/Verification.cpp:
* Source/WebCore/loader/archive/cf/LegacyWebArchive.cpp:
(WebCore::LegacyWebArchive::create):
* Source/WebCore/page/LocalFrameViewLayoutContext.cpp:
(WebCore::LocalFrameViewLayoutContext::layoutUsingFormattingContext):
* Source/WebCore/platform/animation/AcceleratedEffect.cpp:
(WebCore::acceleratedPropertyFromCSSProperty):
* Source/WebCore/platform/mediastream/MediaConstraints.h:
(WebCore::FlattenedConstraint::iterator::iterator):
(WebCore::FlattenedConstraint::iterator::operator++):
* Source/WebKit/UIProcess/WebAuthentication/Cocoa/LocalAuthenticator.mm:
(WebKit::LocalAuthenticator::continueMakeCredentialAfterUserVerification):

Canonical link: https://commits.webkit.org/263591@main