Source/WebCore/layout/Verification.cpp
@@ -26,7 +26,7 @@
 #include "config.h"
 #include "LayoutState.h"
 
-#ifndef NDEBUG
+#if ASSERT_ENABLED
 #include "BlockFormattingState.h"
 #include "InlineFormattingState.h"
 #include "LayoutBox.h"
@@ -351,5 +351,5 @@ void LayoutContext::verifyAndOutputMismatchingLayoutTree(const LayoutState& layo
 }
 }
 
-#endif
+#endif // ASSERT_ENABLED
 
